ingress/ebs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebs-ingress
  namespace: ebs
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: jenkins.ebs.corp
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins
              port:
                number: 8080
    - host: portainer.ebs.corp
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: portainer
              port:
                number: 9000
    - host: grafana.ebs.monitor.corp
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
    - host: prometheus.ebs.monitor.corp
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                number: 9090
    - host: kibana.ebs.monitor.corp
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana
              port:
                number: 5601
