ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: ebs
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.ebs.monitor.corp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - grafana.ebs.monitor.corp
      secretName: ebs-monitor-corp-tls
