ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: ebs
spec:
  ingressClassName: traefik
  rules:
    - host: prometheus.ebs.monitor.corp
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                number: 9090
  tls:
    - hosts:
        - prometheus.ebs.monitor.corp
      secretName: ebs-monitor-corp-tls
